# crewai-tuto

./: .gitignore  CLAUDE.md  README.md  daily_manager.py  main.py  pyproject.toml  veille.yaml  veille_crew.py  youtube_processor.py
config/: agents.yaml  tasks.yaml  topics.yaml
